--- a/index.html
+++ b/index.html
@@ -64,13 +64,12 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "Em sẽ thương anh bằng tất cả sự dịu dàng mà em có 😀",
-              "Hãy nói với e nếu a buồn",
-              "Em sẽ đồng hành cùng anh 🙆‍",
-              "E Chỉ mong a luôn được bình an ❤️",
-              "Bíe iu a Bình nhèo 🥰",
-              "Awww love u so much",
-              "iuu Bình umoah 💓"
+              "iuu anhh nhieuu lắm ạ",
+              "yeuu anhh bee cua em nhieuu lamm ạa",
+      "chúc chongg iu của em công việc thuân lợi",
+      "em iu chongg nhieuu",
+      "chồng ngoan em mua quà cho💗&#x1FAF6;",
+              "chúc anh luôn vui vẻ mỗi ngày và hp bên emm"
             ],
             "music": "/"
           },
@@ -86,6 +85,7 @@
   </div>
   <script type="module" src="/static/js/app.js"></script>
   <script type="module" src="/static/js/home.js"></script>
+    <!--
     <div class='codepro-music-box'>
   <button class='codepro-music-box-toggle-btn'>
     <a title='Play music'><i class='fa fa-music'></i></a>
@@ -175,6 +175,6 @@
     });
   });
 </script>
-
+-->
   </body>
 </html>
